2010-12-31  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/Makefile.am: remove declaration of ModuleHeaderTable (old version)
	* include/dlvhex/ProgramCtx.h: Likewise.

	* src/dlvhex/ID.cpp: fixing how term predicate is printed

	* include/dlvhex/ModuleTable.hpp: new way of module syntax checking using new version of module table
	* include/dlvhex/ProgramCtx.h: Likewise.
	* include/dlvhex/Module.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.
	* testsuite/TestHexParserModule.cpp: Likewise.

2010-12-30  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: change termz to terms
	* src/dlvhex/ProgramCtx.cpp: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.

2010-12-21  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Module.hpp: adding module structure and module table 
	* include/dlvhex/ModuleTable.hpp: Likewise.
	* include/dlvhex/Predicate.hpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

2010-12-20  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/TermTable.hpp: separated term table and pred table 
	* include/dlvhex/HexGrammarPTToASTConverter.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/TestHexParserModule.cpp: Likewise.
	* src/dlvhex/ModuleSyntaxChecker.cpp: Likewise.
	* src/dlvhex/ID.cpp: Likewise.
	* src/dlvhex/ProgramCtx.cpp: Likewise.

	* include/dlvhex/ID.hpp: adding idb list, edb list, and predicate list 
	* include/dlvhex/ProgramCtx.h: Likewise.

	* include/dlvhex/ID.hpp: Separating predicate from term table 
	* include/dlvhex/Predicate.hpp: Likewise.
	* include/dlvhex/PredicateTable.hpp: Likewise.

2010-12-16  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/HexGrammarPTToASTConverter.cpp: change the way predicate namespaced